# debug-assist

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  GITHUB_OAUTH_SETUP.md  PENDENCIAS.md  Prompt.txt  README.md  composer.json  fly.toml  package-lock.json  package.json  swagger.yaml
.claude/: settings.local.json
.github/workflows/: deploy.yml  publish-sdk-browser.yml  publish-sdk-csharp.yml  publish-sdk-js.yml  publish-sdk-php.yml  publish-sdk-python.yml  publish-sdk-ruby.yml
OUTROS/: FALTA CONCLUIR.txt
migrations/: 001_usuarios_planos.sql  002_rls.sql
public/: email-preview.html  index.html  privacidade.html  style.css  termos.html
public/dashboard/: alertas.html  auth-callback.html  configuracoes.html  historico.html  index.html  login.html  pricing.html  signup.html  style.css
public/docs/: sdks.html
public/sdk/: browser.js
sdk/: README.md  index.js  package.json
sdk/browser/: README.md  debugassist.browser.esm.js  debugassist.browser.js  devinsight.browser.esm.js  devinsight.browser.js  package.json  react.js  svelte.js  vue.js
sdk/csharp/: DebugAssist.cs  DebugAssist.csproj  DevInsight.cs  DevInsight.csproj  README.md
sdk/go/: README.md  debugassist.go  devinsight.go  go.mod
sdk/java/: README.md  pom.xml
sdk/php/: README.md  composer.json  debug_assist.php  devinsight.php
sdk/python/: README.md  debug_assist.py  devinsight.py  pyproject.toml  setup.py
sdk/python/.github/workflows/: publish.yml
sdk/ruby/: README.md  debug-assist.gemspec  devinsight.rb
src/: app.js  server.js
src/data/: blocked-domains.js
src/db/: supabase.js
(+93 files in other folders)
